<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 <PreferenceCategory
   android:summary="WhereAppYou Settings"
   android:title="@string/locsettings_label" >
   
  <EditTextPreference
     android:key="locnMinTime"
     android:summary="Enter Minimun Location Timeout"
     android:title="Location Timeout" />
  
  <EditTextPreference
     android:key="locMinDistance"
     android:summary="Enter Minimun Location Distance"
     android:title="Location Distance" />
 </PreferenceCategory>

 <PreferenceCategory
   android:summary="WhereAppYou Settings"
   android:title="@string/miscsettings_label" >

  <CheckBoxPreference
     android:key="respWhenLocAvailable"
     android:summary="@string/respWhenLocAvailable_txt"
     android:title="@string/respWhenLocAvailable_label" />
     
  <CheckBoxPreference
     android:key="onlyFavs"
     android:summary="@string/onlyFavs_txt"
     android:title="@string/onlyFavs_label" />
  
  <CheckBoxPreference
     android:key="incognitoMode"
     android:summary="@string/incognitomode_txt"
     android:title="@string/incognitomode_label" />

  <CheckBoxPreference
     android:key="voiceNotifications"
     android:summary="@string/voiceNotifications_txt"
     android:title="@string/voiceNotifications_label" />
  
  <CheckBoxPreference
     android:key="notifyWhenLocked"
     android:summary="@string/notifyWhenLocked_txt"
     android:title="@string/notifyWhenLocked_label" />
  
 </PreferenceCategory>
</PreferenceScreen>
